--- a/introduction.mdx
+++ b/introduction.mdx
@@ -14,9 +14,9 @@ description: 'Simple building blocks to build your game backend.'
   alt="Hero Dark"
 />
 
-## What is Open Game Services?
+## What is OpenGB (Open Game Backend)?
 
-Open Game Services is a game backend designed to be simple to use and easy to extend & modify.
+OpenGB (Open Game Backend) is a game backend designed to be simple to use and easy to extend & modify.
 
 - **Modular** Add, remove, and modify modules from the backend to fit the use
   case for your game
@@ -27,7 +27,7 @@ Open Game Services is a game backend designed to be simple to use and easy to ex
 - **Strict schemas & documentation** Strict typings & documentation are
   _required_ to make this easy to approach
 - **Portable & lightweight** Built on boring, reliable technology that runs
-  however you want to run OGS
+  however you want to run OpenGB
 - **Package manager for game services** Adding backend functionality to your
   game should be as easy as one command
 - **Permissively licensed** Apache 2.0 license allows developers to adapt,
