--- a/modules/users/overview.mdx
+++ b/modules/users/overview.mdx
@@ -18,7 +18,7 @@ title: Overview
 
 <Steps>
     <Step title="Update config">
-        Add the following to your `ogs.yaml` or `rivet.yaml`:
+        Add the following to your `backend.yaml`:
 
         ```yaml
         modules:
