--- a/modules/auth/scripts/auth_email_passwordless.mdx
+++ b/modules/auth/scripts/auth_email_passwordless.mdx
@@ -1,15 +1,16 @@
 ---
-title: "auth_email_passwordless"
+title: "Authenticate Email Passwordless"
+description: "Send a one-time verification code to a user's email address to authenticate them."
+sidebarTitle: "Authenticate Email Passwordless"
 ---
 
 TODO:
 
-- Display name
 - Schema
 
-| Public     |
-| ---------- |
-| ✅ |
+| Source                                                                                                      | Name     | Public     |
+| ----------------------------------------------------------------------------------------------------------- | -------- | ---------- |
+| [Source](https://github.com/rivet-gg/opengb-registry/tree/main/modules/auth/scripts/auth_email_passwordless.ts) | `auth_email_passwordless` | Yes |
 
 <RequestExample>
 
@@ -34,30 +35,20 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Request
 
-<ResponseField name="user" type="User Object">
-  <Expandable title="properties">
-    <ResponseField name="full_name" type="string">
-      The full name of the user
-    </ResponseField>
-
-    <ResponseField name="is_over_21" type="boolean">
-      Whether the user is over 21 years old
-    </ResponseField>
-
-  </Expandable>
-</ResponseField>
+```typescript
+export interface Request {
+  email: string;
+  userToken?: string;
+}
+```
 
 ## Response
 
-<ResponseField name="user" type="User Object">
-  <Expandable title="properties">
-    <ResponseField name="full_name" type="string">
-      The full name of the user
-    </ResponseField>
-
-    <ResponseField name="is_over_21" type="boolean">
-      Whether the user is over 21 years old
-    </ResponseField>
-
-  </Expandable>
-</ResponseField>
+```typescript
+export interface Response {
+  verification: Verification;
+}
+export interface Verification {
+  id: string;
+}
+```
