--- a/modules/auth/scripts/verify_email_passwordless.mdx
+++ b/modules/auth/scripts/verify_email_passwordless.mdx
@@ -1,15 +1,16 @@
 ---
-title: "verify_email_passwordless"
+title: "Verify Email Passwordless"
+description: "Verify a user's email address with a one-time verification code."
+sidebarTitle: "Verify Email Passwordless"
 ---
 
 TODO:
 
-- Display name
 - Schema
 
-| Public     |
-| ---------- |
-| ✅ |
+| Source                                                                                                      | Name     | Public     |
+| ----------------------------------------------------------------------------------------------------------- | -------- | ---------- |
+| [Source](https://github.com/rivet-gg/opengb-registry/tree/main/modules/auth/scripts/verify_email_passwordless.ts) | `verify_email_passwordless` | Yes |
 
 <RequestExample>
 
@@ -34,30 +35,26 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Request
 
-<ResponseField name="user" type="User Object">
-  <Expandable title="properties">
-    <ResponseField name="full_name" type="string">
-      The full name of the user
-    </ResponseField>
-
-    <ResponseField name="is_over_21" type="boolean">
-      Whether the user is over 21 years old
-    </ResponseField>
-
-  </Expandable>
-</ResponseField>
+```typescript
+export interface Request {
+  verificationId: string;
+  code: string;
+}
+```
 
 ## Response
 
-<ResponseField name="user" type="User Object">
-  <Expandable title="properties">
-    <ResponseField name="full_name" type="string">
-      The full name of the user
-    </ResponseField>
-
-    <ResponseField name="is_over_21" type="boolean">
-      Whether the user is over 21 years old
-    </ResponseField>
-
-  </Expandable>
-</ResponseField>
+```typescript
+export interface Response {
+  token: TokenWithSecret;
+}
+export interface TokenWithSecret {
+  token: string;
+  id: string;
+  type: string;
+  meta: any;
+  createdAt: string;
+  expireAt: null | string;
+  revokedAt: null | string;
+}
+```
