--- a/modules/tokens/overview.mdx
+++ b/modules/tokens/overview.mdx
@@ -1,21 +1,23 @@
 ---
-title: Overview
+title: "Tokens"
+description: "Create & verify tokens for authorization purposes."
+sidebarTitle: Overview
 ---
 
 TODO:
 
-- Display name
-- Source
 - Config
-- Icon
+- Errors
+- Script description
 - Database schema
 
-| Stability     | Database     |
-| ------------- | ------------ |
-| Stable | ✅ |
+| Source                                                                           | Name       | Status     | Database     |
+| -------------------------------------------------------------------------------- | ---------- | ---------- | ------------ |
+| [Source](https://github.com/rivet-gg/opengb-registry/tree/main/modules/tokens) | `tokens` | stable | Yes |
 
 **Authors**
 
+- [rivet-gg](https://github.com/rivet-gg)
 - [NathanFlurry](https://github.com/NathanFlurry)
 
 **Dependencies**
@@ -53,10 +55,14 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Scripts
 
-<CardGroup>
-  <Card title="create" href="/modules/tokens/scripts/create" />
-<Card title="get" href="/modules/tokens/scripts/get" />
-<Card title="get_by_token" href="/modules/tokens/scripts/get_by_token" />
-<Card title="revoke" href="/modules/tokens/scripts/revoke" />
-<Card title="validate" href="/modules/tokens/scripts/validate" />
-</CardGroup>
+<CardGroup><Card title="Create Token" href="/modules/tokens/scripts/create"></Card>
+<Card title="Get Token" href="/modules/tokens/scripts/get">Get a token by its ID.</Card>
+<Card title="Get Token by Token" href="/modules/tokens/scripts/get_by_token">Get a token by its secret token.</Card>
+<Card title="Revoke Token" href="/modules/tokens/scripts/revoke">Revoke a token, preventing it from being used again.</Card>
+<Card title="Validate Token" href="/modules/tokens/scripts/validate">Validate a token. Throws an error if the token is invalid.</Card></CardGroup>
+
+## Errors
+
+- **Token Expired** (`token_expired`) 
+- **Token Not Found** (`token_not_found`) 
+- **Token Revoked** (`token_revoked`) 
