--- a/_internal/templates/script.mdx
+++ b/_internal/templates/script.mdx
@@ -1,15 +1,16 @@
 ---
-title: "%%TITLE%%"
+title: "%%DISPLAY_NAME%%"
+description: "%%DESCRIPTION%%"
+sidebarTitle: "%%DISPLAY_NAME%%"
 ---
 
 TODO:
 
-- Display name
 - Schema
 
-| Public     |
-| ---------- |
-| %%PUBLIC%% |
+| Source                                                                                                      | Name     | Public     |
+| ----------------------------------------------------------------------------------------------------------- | -------- | ---------- |
+| [Source](https://github.com/rivet-gg/opengb-registry/tree/main/modules/%%MODULE_NAME%%/scripts/%%NAME%%.ts) | `%%NAME%%` | %%PUBLIC%% |
 
 <RequestExample>
 
@@ -34,30 +35,12 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Request
 
-<ResponseField name="user" type="User Object">
-  <Expandable title="properties">
-    <ResponseField name="full_name" type="string">
-      The full name of the user
-    </ResponseField>
-
-    <ResponseField name="is_over_21" type="boolean">
-      Whether the user is over 21 years old
-    </ResponseField>
-
-  </Expandable>
-</ResponseField>
+```typescript
+%%REQUEST_SCHEMA%%
+```
 
 ## Response
 
-<ResponseField name="user" type="User Object">
-  <Expandable title="properties">
-    <ResponseField name="full_name" type="string">
-      The full name of the user
-    </ResponseField>
-
-    <ResponseField name="is_over_21" type="boolean">
-      Whether the user is over 21 years old
-    </ResponseField>
-
-  </Expandable>
-</ResponseField>
+```typescript
+%%RESPONSE_SCHEMA%%
+```
