--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,47 +1,77 @@
 ---
 title: Overview
-description: "Simple building blocks to build your game backend."
+description: "Open-source modular backend for all games and tools."
 ---
+
+import { Tags } from "/snippets/tags.mdx";
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.svg"
+  src="/images/hero-light.png"
   alt="Hero Light"
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.svg"
+  src="/images/hero-dark.png"
   alt="Hero Dark"
 />
 
-## What is OpenGB (Open Game Backend)?
+## What is Open Game Backend?
 
-OpenGB (Open Game Backend) is a game backend designed to be simple to use and easy to extend & modify.
+- **First-class scripting, designed like a game engine** Easily extend & modify to grow with your backend on top of the [OpenGB Engine](/engine/introduction) using TypeScript; no backend experience required.
+- **Modular** Mix, match, & modify modules as needed to fit your game's unique requirements.
+- **Secure, load-tested, & resilient** Built to withstand the chaos that games need to grow & stay online. Load testing, rate limits, captchas, strict schemas, <Tooltip tip="...documentation, secrets management, auto-scaling, and backups">and more</Tooltip> are all enforced by default.
+- **Batteries included** Provides thoroughly reviewed, tested, and documented modules to get you started quickly & allow you to customize to fit your needs.
+- **Open-source & permissively licensed** Apache 2.0 license allows you to adapt, modify, & redistribute freely. _[Trust no one, own your backend.](https://delistedgames.com/gamesparks-service-to-end-in-september-potential-threat-to-thousands-of-titles/)_
 
-- **Modular** Add, remove, and modify modules from the backend to fit the use
-  case for your game
-- **Easy to use for game devs** The Engine takes care of the hard stuff so
-  adding functionality is dead simple
-- **Secure & load tested** Security, laod testing & anti-botting is not an
-  afterthought
-- **Strict schemas & documentation** Strict typings & documentation are
-  _required_ to make this easy to approach
-- **Portable & lightweight** Built on boring, reliable technology that runs
-  however you want to run OpenGB
-- **Package manager for game services** Adding backend functionality to your
-  game should be as easy as one command
-- **Permissively licensed** Apache 2.0 license allows developers to adapt,
-  modify, & redistribute
+See our [quickstart guide](/concepts/quickstart) to get started quickly. See how Open Game Backend compares to [other solutions](/comparison/playfab).
 
 ## Modules
 
+These modules are thoroughly reviewed, tested, and documented to help you get your game backend up and running as quickly as possible. Learn more about [creating your own module](/build/introduction) and [using your own registries](/concepts/registries).
+
 <CardGroup cols={2}>
-  <Card title="Write your own" icon="plus" href="/building/introduction" />
-  <Card title="auth" icon="user" href="/modules/auth/overview" />
-<Card title="currency" icon="user" href="/modules/currency/overview" />
-<Card title="email" icon="user" href="/modules/email/overview" />
-<Card title="friends" icon="user" href="/modules/friends/overview" />
-<Card title="rate_limit" icon="user" href="/modules/rate_limit/overview" />
-<Card title="tokens" icon="user" href="/modules/tokens/overview" />
-<Card title="users" icon="user" href="/modules/users/overview" />
+  <Card title="Build your own" icon="plus" href="/build/introduction" />
+  
+        <Card title="Authentication" icon="key" href="/modules/auth/overview">
+          <div>Authenticate users with multiple authentication methods.</div>
+          <Tags tags={["stable","core","auth","user"]} />
+        </Card>
+      
+
+        <Card title="Currency" icon="coin" href="/modules/currency/overview">
+          <div>Track user balances and allow them to deposit and withdraw.</div>
+          <Tags tags={["preview","economy"]} />
+        </Card>
+      
+
+        <Card title="Email" icon="envelope" href="/modules/email/overview">
+          <div>Send emails using multiple providers.</div>
+          <Tags tags={["stable","email"]} />
+        </Card>
+      
+
+        <Card title="Friends" icon="user-group" href="/modules/friends/overview">
+          <div>Allow users to send and accept friend requests.</div>
+          <Tags tags={["beta","social"]} />
+        </Card>
+      
+
+        <Card title="Rate Limit" icon="gauge-circle-minus" href="/modules/rate_limit/overview">
+          <div>Prevent abuse by limiting request rate.</div>
+          <Tags tags={["stable","core","utility"]} />
+        </Card>
+      
+
+        <Card title="Tokens" icon="lock" href="/modules/tokens/overview">
+          <div>Create & verify tokens for authorization purposes.</div>
+          <Tags tags={["stable","core","utility"]} />
+        </Card>
+      
+
+        <Card title="Users" icon="user" href="/modules/users/overview">
+          <div>Identify and manage users.</div>
+          <Tags tags={["stable","core","social"]} />
+        </Card>
+      
 </CardGroup>
