--- a/modules/currency/overview.mdx
+++ b/modules/currency/overview.mdx
@@ -1,18 +1,19 @@
 ---
-title: Overview
+title: "Currency"
+description: "Track user balances and allow them to deposit and withdraw."
+sidebarTitle: Overview
 ---
 
 TODO:
 
-- Display name
-- Source
 - Config
-- Icon
+- Errors
+- Script description
 - Database schema
 
-| Stability     | Database     |
-| ------------- | ------------ |
-| Stable | ✅ |
+| Source                                                                           | Name       | Status     | Database     |
+| -------------------------------------------------------------------------------- | ---------- | ---------- | ------------ |
+| [Source](https://github.com/rivet-gg/opengb-registry/tree/main/modules/currency) | `currency` | preview | Yes |
 
 **Authors**
 
@@ -20,8 +21,8 @@ TODO:
 
 **Dependencies**
 
-- [rate_limit](/modules/rate_limit/introduction)
-- [users](/modules/users/introduction)
+- [Rate Limit](/modules/rate_limit/overview)
+- [Users](/modules/users/overview)
 
 ## Installation
 
@@ -54,10 +55,14 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Scripts
 
-<CardGroup>
-  <Card title="deposit" href="/modules/currency/scripts/deposit" />
-<Card title="withdraw" href="/modules/currency/scripts/withdraw" />
-<Card title="get_balance" href="/modules/currency/scripts/get_balance" />
-<Card title="set_balance" href="/modules/currency/scripts/set_balance" />
-<Card title="get_balance_by_token" href="/modules/currency/scripts/get_balance_by_token" />
-</CardGroup>
+<CardGroup><Card title="Deposit" href="/modules/currency/scripts/deposit"></Card>
+<Card title="Get Balance" href="/modules/currency/scripts/get_balance"></Card>
+<Card title="Get Balance by Token" href="/modules/currency/scripts/get_balance_by_token"></Card>
+<Card title="Set Balance" href="/modules/currency/scripts/set_balance"></Card>
+<Card title="Withdraw" href="/modules/currency/scripts/withdraw"></Card></CardGroup>
+
+## Errors
+
+- **Invalid Amount** (`invalid_amount`) 
+- **Invalid User** (`invalid_user`) 
+- **Not Enough Funds** (`not_enough_funds`) 
