--- a/modules/email/scripts/send_email.mdx
+++ b/modules/email/scripts/send_email.mdx
@@ -1,15 +1,16 @@
 ---
-title: "send_email"
+title: "Send Email"
+description: ""
+sidebarTitle: "Send Email"
 ---
 
 TODO:
 
-- Display name
 - Schema
 
-| Public     |
-| ---------- |
-| ❌ |
+| Source                                                                                                      | Name     | Public     |
+| ----------------------------------------------------------------------------------------------------------- | -------- | ---------- |
+| [Source](https://github.com/rivet-gg/opengb-registry/tree/main/modules/email/scripts/send_email.ts) | `send_email` | No |
 
 <RequestExample>
 
@@ -34,30 +35,34 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Request
 
-<ResponseField name="user" type="User Object">
-  <Expandable title="properties">
-    <ResponseField name="full_name" type="string">
-      The full name of the user
-    </ResponseField>
-
-    <ResponseField name="is_over_21" type="boolean">
-      Whether the user is over 21 years old
-    </ResponseField>
-
-  </Expandable>
-</ResponseField>
+```typescript
+export interface Request {
+  from: Email;
+  to: Email[];
+  cc?: Email[];
+  bcc?: Email[];
+  replyTo?: Email[];
+  subject: string;
+  html?: string;
+  text?: string;
+}
+/**
+ * Identifies an email address and optionally a name.
+ */
+export interface Email {
+  /**
+   * Target email.
+   */
+  email: string;
+  /**
+   * Optional display name for the email.
+   */
+  name?: string;
+}
+```
 
 ## Response
 
-<ResponseField name="user" type="User Object">
-  <Expandable title="properties">
-    <ResponseField name="full_name" type="string">
-      The full name of the user
-    </ResponseField>
-
-    <ResponseField name="is_over_21" type="boolean">
-      Whether the user is over 21 years old
-    </ResponseField>
-
-  </Expandable>
-</ResponseField>
+```typescript
+export interface Response {}
+```
