--- a/modules/friends/scripts/send_request.mdx
+++ b/modules/friends/scripts/send_request.mdx
@@ -1,15 +1,16 @@
 ---
-title: "send_request"
+title: "Send Request"
+description: "Send a friend request to another user."
+sidebarTitle: "Send Request"
 ---
 
 TODO:
 
-- Display name
 - Schema
 
-| Public     |
-| ---------- |
-| ✅ |
+| Source                                                                                                      | Name     | Public     |
+| ----------------------------------------------------------------------------------------------------------- | -------- | ---------- |
+| [Source](https://github.com/rivet-gg/opengb-registry/tree/main/modules/friends/scripts/send_request.ts) | `send_request` | Yes |
 
 <RequestExample>
 
@@ -34,30 +35,25 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Request
 
-<ResponseField name="user" type="User Object">
-  <Expandable title="properties">
-    <ResponseField name="full_name" type="string">
-      The full name of the user
-    </ResponseField>
-
-    <ResponseField name="is_over_21" type="boolean">
-      Whether the user is over 21 years old
-    </ResponseField>
-
-  </Expandable>
-</ResponseField>
+```typescript
+export interface Request {
+  userToken: string;
+  targetUserId: string;
+}
+```
 
 ## Response
 
-<ResponseField name="user" type="User Object">
-  <Expandable title="properties">
-    <ResponseField name="full_name" type="string">
-      The full name of the user
-    </ResponseField>
-
-    <ResponseField name="is_over_21" type="boolean">
-      Whether the user is over 21 years old
-    </ResponseField>
-
-  </Expandable>
-</ResponseField>
+```typescript
+export interface Response {
+  friendRequest: FriendRequest;
+}
+export interface FriendRequest {
+  id: string;
+  senderUserId: string;
+  targetUserId: string;
+  createdAt: string;
+  declinedAt: null | string;
+  acceptedAt: null | string;
+}
+```
