--- a/modules/rate_limit/overview.mdx
+++ b/modules/rate_limit/overview.mdx
@@ -1,21 +1,23 @@
 ---
-title: Overview
+title: "Rate Limit"
+description: "Prevent abuse by limiting request rate."
+sidebarTitle: Overview
 ---
 
 TODO:
 
-- Display name
-- Source
 - Config
-- Icon
+- Errors
+- Script description
 - Database schema
 
-| Stability     | Database     |
-| ------------- | ------------ |
-| Stable | ✅ |
+| Source                                                                           | Name       | Status     | Database     |
+| -------------------------------------------------------------------------------- | ---------- | ---------- | ------------ |
+| [Source](https://github.com/rivet-gg/opengb-registry/tree/main/modules/rate_limit) | `rate_limit` | stable | Yes |
 
 **Authors**
 
+- [rivet-gg](https://github.com/rivet-gg)
 - [NathanFlurry](https://github.com/NathanFlurry)
 
 **Dependencies**
@@ -53,7 +55,9 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Scripts
 
-<CardGroup>
-  <Card title="throttle" href="/modules/rate_limit/scripts/throttle" />
-<Card title="throttle_public" href="/modules/rate_limit/scripts/throttle_public" />
-</CardGroup>
+<CardGroup><Card title="Throttle" href="/modules/rate_limit/scripts/throttle">Limit the amount of times an request can be made by a given key.</Card>
+<Card title="Throttle Public" href="/modules/rate_limit/scripts/throttle_public">Limit the amount of times a public request can be made by a given key. This will rate limit based off the user's IP address.</Card></CardGroup>
+
+## Errors
+
+- **Rate Limit Exceeded** (`rate_limit_exceeded`) 
