--- a/modules/rate_limit/scripts/throttle_public.mdx
+++ b/modules/rate_limit/scripts/throttle_public.mdx
@@ -1,15 +1,16 @@
 ---
-title: "throttle_public"
+title: "Throttle Public"
+description: "Limit the amount of times a public request can be made by a given key. This will rate limit based off the user's IP address."
+sidebarTitle: "Throttle Public"
 ---
 
 TODO:
 
-- Display name
 - Schema
 
-| Public     |
-| ---------- |
-| ❌ |
+| Source                                                                                                      | Name     | Public     |
+| ----------------------------------------------------------------------------------------------------------- | -------- | ---------- |
+| [Source](https://github.com/rivet-gg/opengb-registry/tree/main/modules/rate_limit/scripts/throttle_public.ts) | `throttle_public` | No |
 
 <RequestExample>
 
@@ -34,30 +35,21 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Request
 
-<ResponseField name="user" type="User Object">
-  <Expandable title="properties">
-    <ResponseField name="full_name" type="string">
-      The full name of the user
-    </ResponseField>
-
-    <ResponseField name="is_over_21" type="boolean">
-      Whether the user is over 21 years old
-    </ResponseField>
-
-  </Expandable>
-</ResponseField>
+```typescript
+export interface Request {
+  /**
+   * Number of requests in `period` before rate limiting.
+   */
+  requests?: number;
+  /**
+   * How frequently to reset the request counter.
+   */
+  period?: number;
+}
+```
 
 ## Response
 
-<ResponseField name="user" type="User Object">
-  <Expandable title="properties">
-    <ResponseField name="full_name" type="string">
-      The full name of the user
-    </ResponseField>
-
-    <ResponseField name="is_over_21" type="boolean">
-      Whether the user is over 21 years old
-    </ResponseField>
-
-  </Expandable>
-</ResponseField>
+```typescript
+export interface Response {}
+```
