--- a/modules/users/overview.mdx
+++ b/modules/users/overview.mdx
@@ -1,27 +1,29 @@
 ---
-title: Overview
+title: "Users"
+description: "Identify and manage users."
+sidebarTitle: Overview
 ---
 
 TODO:
 
-- Display name
-- Source
 - Config
-- Icon
+- Errors
+- Script description
 - Database schema
 
-| Stability     | Database     |
-| ------------- | ------------ |
-| Stable | ✅ |
+| Source                                                                           | Name       | Status     | Database     |
+| -------------------------------------------------------------------------------- | ---------- | ---------- | ------------ |
+| [Source](https://github.com/rivet-gg/opengb-registry/tree/main/modules/users) | `users` | stable | Yes |
 
 **Authors**
 
+- [rivet-gg](https://github.com/rivet-gg)
 - [NathanFlurry](https://github.com/NathanFlurry)
 
 **Dependencies**
 
-- [rate_limit](/modules/rate_limit/introduction)
-- [tokens](/modules/tokens/introduction)
+- [Rate Limit](/modules/rate_limit/overview)
+- [Tokens](/modules/tokens/overview)
 
 ## Installation
 
@@ -54,9 +56,12 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Scripts
 
-<CardGroup>
-  <Card title="get_user" href="/modules/users/scripts/get_user" />
-<Card title="create_user" href="/modules/users/scripts/create_user" />
-<Card title="validate_user_token" href="/modules/users/scripts/validate_user_token" />
-<Card title="create_user_token" href="/modules/users/scripts/create_user_token" />
-</CardGroup>
+<CardGroup><Card title="Create User" href="/modules/users/scripts/create_user"></Card>
+<Card title="Create User Token" href="/modules/users/scripts/create_user_token">Create a token for a user to authenticate future requests.</Card>
+<Card title="Get User" href="/modules/users/scripts/get_user"></Card>
+<Card title="Validate User Token" href="/modules/users/scripts/validate_user_token">Validate a user token. Throws an error if the token is invalid.</Card></CardGroup>
+
+## Errors
+
+- **Token Not User Token** (`token_not_user_token`) 
+- **Unknown Identity Type** (`unknown_identity_type`) 
