feat: fix missing pages

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -24,7 +24,7 @@ import { Tags } from "/snippets/tags.mdx";
 - **Batteries included** Provides thoroughly reviewed, tested, and documented modules to get you started quickly & allow you to customize to fit your needs.
 - **Open-source & permissively licensed** Apache 2.0 license allows you to adapt, modify, & redistribute freely. _[Trust no one, own your backend.](https://delistedgames.com/gamesparks-service-to-end-in-september-potential-threat-to-thousands-of-titles/)_
 
-See our [quickstart guide](/concepts/quickstart) to get started quickly. See how Open Game Backend compares to [other solutions](/comparison/playfab).
+See our [quickstart guide](/concepts/quickstart) to get up and running today. See how Open Game Backend compares to other game backends [here](/comparison/playfab).
 
 ## Modules
 
