--- a/modules/email/overview.mdx
+++ b/modules/email/overview.mdx
@@ -32,9 +32,7 @@ Add the following to your `backend.yaml`:
 
 ```yaml
 modules:
-  users:
-    config:
-      # Your config here. See below for more details.
+  users: {}
 
 ```
 
