--- a/modules/auth/overview.mdx
+++ b/modules/auth/overview.mdx
@@ -34,9 +34,7 @@ Add the following to your `backend.yaml`:
 
 ```yaml
 modules:
-  users:
-    config:
-      # Your config here. See below for more details.
+  users: {}
 
 ```
 
