--- a/modules/auth/overview.mdx
+++ b/modules/auth/overview.mdx
@@ -34,7 +34,7 @@ Add the following to your `backend.yaml`:
 
 ```yaml
 modules:
-  users:
+  auth:
     config:
       # Your config here. See below for more details.
 
