--- a/modules/email/overview.mdx
+++ b/modules/email/overview.mdx
@@ -32,7 +32,7 @@ Add the following to your `backend.yaml`:
 
 ```yaml
 modules:
-  users:
+  email:
     config:
       # Your config here. See below for more details.
 
