--- a/modules/auth/overview.mdx
+++ b/modules/auth/overview.mdx
@@ -59,8 +59,7 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Scripts
 
-<CardGroup><Card title="Authenticate Email Passwordless" href="/modules/auth/scripts/auth_email_passwordless">Send a one-time verification code to a user's email address to authenticate them.</Card>
-<Card title="Verify Email Passwordless" href="/modules/auth/scripts/verify_email_passwordless">Verify a user's email address with a one-time verification code.</Card></CardGroup>
+<CardGroup><Card title="Authenticate Email Passwordless" href="/modules/auth/scripts/auth_email_passwordless">Send a one-time verification code to a user's email address to authenticate them.</Card><Card title="Verify Email Passwordless" href="/modules/auth/scripts/verify_email_passwordless">Verify a user's email address with a one-time verification code.</Card></CardGroup>
 
 ## Errors
 
