--- a/modules/rate_limit/overview.mdx
+++ b/modules/rate_limit/overview.mdx
@@ -55,8 +55,7 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Scripts
 
-<CardGroup><Card title="Throttle" href="/modules/rate_limit/scripts/throttle">Limit the amount of times an request can be made by a given key.</Card>
-<Card title="Throttle Public" href="/modules/rate_limit/scripts/throttle_public">Limit the amount of times a public request can be made by a given key. This will rate limit based off the user's IP address.</Card></CardGroup>
+<CardGroup><Card title="Throttle" href="/modules/rate_limit/scripts/throttle">Limit the amount of times an request can be made by a given key.</Card><Card title="Throttle Public" href="/modules/rate_limit/scripts/throttle_public">Limit the amount of times a public request can be made by a given key. This will rate limit based off the user's IP address.</Card></CardGroup>
 
 ## Errors
 
