--- a/modules/users/overview.mdx
+++ b/modules/users/overview.mdx
@@ -56,10 +56,7 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Scripts
 
-<CardGroup><Card title="Create User" href="/modules/users/scripts/create_user"></Card>
-<Card title="Create User Token" href="/modules/users/scripts/create_user_token">Create a token for a user to authenticate future requests.</Card>
-<Card title="Get User" href="/modules/users/scripts/get_user"></Card>
-<Card title="Validate User Token" href="/modules/users/scripts/validate_user_token">Validate a user token. Throws an error if the token is invalid.</Card></CardGroup>
+<CardGroup><Card title="Create User" href="/modules/users/scripts/create_user"></Card><Card title="Create User Token" href="/modules/users/scripts/create_user_token">Create a token for a user to authenticate future requests.</Card><Card title="Get User" href="/modules/users/scripts/get_user"></Card><Card title="Validate User Token" href="/modules/users/scripts/validate_user_token">Validate a user token. Throws an error if the token is invalid.</Card></CardGroup>
 
 ## Errors
 
