--- a/modules/currency/overview.mdx
+++ b/modules/currency/overview.mdx
@@ -55,11 +55,7 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Scripts
 
-<CardGroup><Card title="Deposit" href="/modules/currency/scripts/deposit"></Card>
-<Card title="Get Balance" href="/modules/currency/scripts/get_balance"></Card>
-<Card title="Get Balance by Token" href="/modules/currency/scripts/get_balance_by_token"></Card>
-<Card title="Set Balance" href="/modules/currency/scripts/set_balance"></Card>
-<Card title="Withdraw" href="/modules/currency/scripts/withdraw"></Card></CardGroup>
+<CardGroup><Card title="Deposit" href="/modules/currency/scripts/deposit"></Card><Card title="Get Balance" href="/modules/currency/scripts/get_balance"></Card><Card title="Get Balance by Token" href="/modules/currency/scripts/get_balance_by_token"></Card><Card title="Set Balance" href="/modules/currency/scripts/set_balance"></Card><Card title="Withdraw" href="/modules/currency/scripts/withdraw"></Card></CardGroup>
 
 ## Errors
 
