--- a/modules/friends/overview.mdx
+++ b/modules/friends/overview.mdx
@@ -56,13 +56,7 @@ let response = await fetch("https://dog-api.kinduff.com/api/facts", {});
 
 ## Scripts
 
-<CardGroup><Card title="Accept Request" href="/modules/friends/scripts/accept_request">Accept a friend request from another user.</Card>
-<Card title="Decline Request" href="/modules/friends/scripts/decline_request">Decline a friend request from another user.</Card>
-<Card title="List Friends" href="/modules/friends/scripts/list_friends">List all friends of a user.</Card>
-<Card title="List Incoming Friend Requests" href="/modules/friends/scripts/list_incoming_friend_requests">List all friend requests received by a user.</Card>
-<Card title="List Outgoing Friend Requests" href="/modules/friends/scripts/list_outgoing_friend_requests">List all friend requests sent by a user.</Card>
-<Card title="Remove Friend" href="/modules/friends/scripts/remove_friend">Remove a friend from your friends list.</Card>
-<Card title="Send Request" href="/modules/friends/scripts/send_request">Send a friend request to another user.</Card></CardGroup>
+<CardGroup><Card title="Accept Request" href="/modules/friends/scripts/accept_request">Accept a friend request from another user.</Card><Card title="Decline Request" href="/modules/friends/scripts/decline_request">Decline a friend request from another user.</Card><Card title="List Friends" href="/modules/friends/scripts/list_friends">List all friends of a user.</Card><Card title="List Incoming Friend Requests" href="/modules/friends/scripts/list_incoming_friend_requests">List all friend requests received by a user.</Card><Card title="List Outgoing Friend Requests" href="/modules/friends/scripts/list_outgoing_friend_requests">List all friend requests sent by a user.</Card><Card title="Remove Friend" href="/modules/friends/scripts/remove_friend">Remove a friend from your friends list.</Card><Card title="Send Request" href="/modules/friends/scripts/send_request">Send a friend request to another user.</Card></CardGroup>
 
 ## Errors
 
